# src/main/resources/swagger/api-animal.yaml
@@ -3,7 +3,7 @@ swagger: '2.0'
 info:
   version: '0.0.1-SNAPSHOT'
   title: 'API - Animals'
-  description: 'API de recursos de manipulação para Animals'
+  description: 'API de recursos de manipulação para Carros'
 
 host: localhost:8080
 basePath: /api/v1
@@ -25,19 +25,18 @@ paths:
         - "Carros"
       summary: Lista todos os carros cadastrados
       description: Lista todos os detalhes dos carros cadastrados.
-      operationId: listAllCarro
+      operationId: listaTodosCarros
       produces:
         - application/json
       responses:
         200:
-          description: Representação dos dados de todos os animais cadastrados.
+          description: "Representação dos dados de todos os carros cadastrados."
           schema:
             $ref: '#/definitions/ResponseGetCarros'
         404:
           description: "Nenhum carro encontrado"
         500:
           description: "Erro interno"
-  /carros:
     post:
       tags:
       - "Carros"
@@ -59,7 +58,7 @@ paths:
         201:
           description: "Carro adicionado com sucesso"
           schema:
-            $ref: '#/definitions/ResponsePostCarros'
+            $ref: '#/definitions/ResponsePadraoCarro'
         405:
           description: "Entrada inválida"
         500:
@@ -70,7 +69,7 @@ paths:
         - "Carros"
       summary: Lista um carro específico
       description: Lista os detalhes de um carro específico de acordo com o ID.
-      operationId: listCarro
+      operationId: listCarroPorId
       produces:
         - application/json
       parameters:
@@ -88,7 +87,51 @@ paths:
           description: Nenhum carro encontrado correspondente ao ID informado
         500:
           description: Erro interno
-
+    put:
+      tags:
+      - "Carros"
+      summary: "Atualiza um carro existente."
+      description: "Atualiza um novo carro retornando a URI de acesso ao recurso"
+      operationId: "atualizaCarro"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Objeto do tipo carro que será atualizado"
+        required: true
+        schema:
+          $ref: "#/definitions/CarroModel"
+      responses:
+        200:
+          description: "Carro atualizado com sucesso"
+          schema:
+            $ref: '#/definitions/ResponsePadraoCarro'
+        405:
+          description: "Entrada inválida"
+        500:
+          description: "Erro interno"
+    delete:
+      tags:
+      - "Carros"
+      summary: "Remove um carro existente"
+      description: "Exclui um novo carro retornando a URI de acesso ao recurso. Nesse caso, ao utiliar a URI será retornado uma resposta 404"
+      operationId: "adicionaCarro"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "Carro removido com sucesso"
+          schema:
+            $ref: '#/definitions/ResponsePadraoCarro'
+        405:
+          description: "Entrada inválida"
+        500:
+          description: "Erro interno"
 definitions:
   ResponseGetCarros:
     type: object
@@ -104,7 +147,7 @@ definitions:
       carro:
         $ref: '#/definitions/CarroModel'
 
-  ResponsePostCarros:
+  ResponsePadraoCarro:
     type: object
     properties:
       uri:
@@ -130,10 +173,10 @@ definitions:
   Carro:
     type: "object"
     required:
+      - "id"
       - "codigo"
       - "descricao"
-      - "dataCriacao"
-      - "dataAtualizacao"
+      - "tipo"
     properties:
       id:
         type: "integer"
@@ -145,21 +188,21 @@ definitions:
         type: "string"
       dataCriacao:
         type: "string"
-        format: "date"
+        format: "date-time"
       dataAtualizacao:
         type: "string"
         format: "date-time"
-      tipoCarro:
+      tipo:
         $ref: "#/definitions/TipoCarro"
   CarroModel:
     type: "object"
-    required:
-      - "codigo"
-      - "descricao"
-      - "dataCriacao"
-      - "dataAtualizacao"
     properties:
+      id:
+        type: "integer"
+        format: "int64"
       codigo:
+        type: "integer"
+        format: "int64"
         type: "string"
       descricao:
         type: "string"
@@ -167,5 +210,6 @@ definitions:
         type: "string"
       dataAtualizacao:
         type: "string"
-      tipoCarro:
-        type: "string"
+      tipo:
+        type: "integer"
+        format: "int64"
